--- a/CAPSProj/src/main/resources/templates/error/404.html
+++ b/CAPSProj/src/main/resources/templates/error/404.html
@@ -19,7 +19,7 @@ integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLAS
 	
 		<nav class="navbar navbar-expand-lg">
 		  <div class="container-fluid">
-		    <a class="navbar-brand" href="#">CAPS</a>
+		    <a class="navbar-brand" href="/">CAPS</a>
 		    <img th:src="@{/images/schoolLogo.png}" />
 		    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 		      <span class="navbar-toggler-icon"></span>
@@ -29,27 +29,9 @@ integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLAS
 		    <div class="collapse navbar-collapse" id="navbarSupportedContent">
 		      <ul class="navbar-nav me-auto mb-2 mb-lg-0 ms-left">
 		        <li class="nav-item">
-		          <a class="nav-link active" aria-current="page" href="#">Home</a>
+		          <a class="nav-link active" aria-current="page" href="/">Home</a>
 		        </li>
-		        <li class="nav-item">
-		          <a class="nav-link" href="#news">Breaking News</a>
-		        </li>
-		        <li class="nav-item dropdown">
-		          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-		            Services
-		          </a>
-		          <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-		            <li sec:authorize="hasAnyAuthority('ROLE_STUDENT')"><a class="dropdown-item" href="/student/gradesandgpa">Students</a></li>
-		            <li  sec:authorize="hasAnyAuthority('ROLE_LECTURER')"><a class="dropdown-item" href="/lecturer/coursestaught">Lecturers</a></li>
-		            <li  sec:authorize="hasAnyAuthority('ROLE_ADMIN')"><a class="dropdown-item" href="/admin/list">Admin</a></li>
-		            <li><hr class="dropdown-divider"></li>
-		            <li><a class="dropdown-item" href="mailto: nusissit@example.com">Contact IT</a></li>
-		          </ul>
-		        </li>
-		       	
-		       	<li class="nav-item">
-		          <a class="nav-link" href="#feature">Feature</a>
-		        </li>
+		      
 		        <li class="nav-item" sec:authorize="isAuthenticated()">
 		          <a class="nav-link" th:href ="@{home/edituser}">Update Profile</a>
 		        </li>
@@ -57,7 +39,7 @@ integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLAS
 		      </ul>
 		      <form class="d-flex">
 		        <div sec:authorize="isAnonymous()">
-					<a href="home/login"><button type="button" class="btn">Login</button></a>
+					<a href="/home/login"><button type="button" class="btn">Login</button></a>
 				</div>
 				 </form>
 				<div sec:authorize="isAuthenticated()">
@@ -70,6 +52,9 @@ integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLAS
 </div>
 
 		<div>
-			<h1 class="heading"> You are not authorised to access this page.</h1>
 
+			<h1 class="heading">
+				You seem to be lost! Click <a class="nav-link active"
+					aria-current="page" href="/#">Here</a> to go back to the home page.
+			</h1>
 		</div>
