--- a/CAPSProj/src/main/resources/templates/login.html
+++ b/CAPSProj/src/main/resources/templates/login.html
@@ -18,7 +18,7 @@ integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLAS
 	<div th:if="${param.Logout}">
 		<p class="text-warning">You have been logged out</p>
 	</div>
-	<form th:action="@{/login}" method="post" style="max-width:350px; margin: 0 auto;">
+	<form th:action="@{/home/login}" method="post" style="max-width:350px; margin: 0 auto;">
 		<div class = "border border-secondary p-3 rounded">
 			<p>Access to CAPS portal</p>
 			<p>
